--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:orientation="vertical"
+                android:layoutAnimation="@anim/layout_animation_slide_right"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
