--- a/app/src/main/res/layout/dialog_about_infor.xml
+++ b/app/src/main/res/layout/dialog_about_infor.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--关于-->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -9,6 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:text="每日一图"
+        android:textStyle="bold"
 
         android:textSize="25dp"
         android:layout_height="50dp" />
