--- a/app/src/main/res/layout/layout_viewpager_imageshow.xml
+++ b/app/src/main/res/layout/layout_viewpager_imageshow.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--点击图片之后查看的布局-->
 <RelativeLayout android:orientation="vertical"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
@@ -8,8 +9,8 @@
     <ImageButton
         android:id="@+id/back"
         android:layout_alignParentTop="true"
-        android:src="@drawable/ic_back"
-        android:background="@color/bg_button"
+        android:src="@drawable/nav_back"
+        android:background="?android:attr/selectableItemBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <!-- 切换卡 -->
@@ -18,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/viewPager">
-
+<!--此处加载缩放布局layou_viewpager_image-->
     </android.support.v4.view.ViewPager>
     <TextView
         android:id="@+id/index"
@@ -40,8 +41,9 @@
     </LinearLayout>
 
     <ImageButton
+        style="?attr/actionButtonStyle"
         android:src="@drawable/ic_delete"
-        android:background="@color/bg_button"
+        android:background="?android:attr/selectableItemBackground"
         android:id="@+id/click"
         android:paddingBottom="20dp"
         android:layout_alignParentBottom="true"
