--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:title=""
-     android:visible="false"/>
-<item android:title="@string/backup"
-    android:id="@+id/backup"
-    android:icon="@drawable/ic_backup"
-    app:showAsAction="always"/>
 <item android:title="@string/delete"
-    android:id="@+id/delete"
+    android:id="@+id/menu_action"
     android:icon="@drawable/ic_delete"
     app:showAsAction="ifRoom"/>
 <item android:title="@string/setting"
